tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_as_return_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused function foo
  ┌─ src/main.nr:7:8
  │
7 │     fn foo<T, let I: Field>(x: T) -> I where T: Zeroed {
  │        --- unused function
  │

error: Expected type, found numeric generic
  ┌─ src/main.nr:7:38
  │
7 │     fn foo<T, let I: Field>(x: T) -> I where T: Zeroed {
  │                                      - not a type
  │

Aborting due to 1 previous error
